# gpt-sovits-rs

./: .dockerignore  .env.example  .gitignore  COMPLETION_REPORT.md  Cargo.toml  Dockerfile  Dockerfile.cuda  IMPLEMENTATION.md  LICENSE  README.md  compare_gpt.py  compose.cpu.yml  compose.cuda.yml  convert_gpt_weights.py  convert_sovits_weights.py  convert_sv_embedding.py  prepare_models.py  requirements-models.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
benches/: conv1d_cpu_bench.rs  fp16_vs_fp32_bench.rs  gpt_dtype_bench.rs  inference_bench.rs  kv_cache_bench.rs
docs/: AGENT_INTEGRATION.md  API.md  CUDA_OXIDE_EXPERIMENT.md  DEPLOYMENT.md  DEVELOPMENT.md  MODELS.md  PERFORMANCE.md  PRODUCT_GOAL.md  PROSODY.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.0.md  v1.2.0.md
examples/: benchmark_fp16_vs_fp32.rs  benchmark_fused_qkv.rs  benchmark_gpu_kv_cache.rs  benchmark_kv_cache.rs  benchmark_speaker_cache.rs  check_phonemes.rs  check_ups0_weights.rs  cli_inference.rs  compare_cuda_graph_tokens.rs  compare_decoder.rs  compare_gpt.rs  compare_stages.rs  compare_tokens.rs  cuda_oxide_candle.rs  debug_decoder.rs  debug_decoder_full.rs  debug_decoder_input.rs  debug_layer0.rs  debug_mrte.rs  debug_nan.rs  debug_pe.rs  e2e_gpu_test.rs  e2e_quick.rs  profile_kv_cache.rs  profile_pipeline.rs  quality_smoke.rs  sovits_audio_test.rs  test_all_rb_branches.rs  test_conv_pre_weights.rs  test_conv_transpose.rs  test_conv_transpose_detail.rs  test_conv_transpose_fmt.rs  test_conv_transpose_scale.rs  test_cpu_vs_cuda_conv1d.rs  test_decoder_debug.rs  test_decoder_lib.rs  test_embedding_lookup.rs  test_encq_path.rs  test_full_resblock_debug.rs  test_hubert_fusion.rs  (+11 more)
examples/samples/: README.md
experiments/cuda-oxide/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
experiments/cuda-oxide/src/: main.rs
scripts/: convert_local_models.py  download_and_convert.py  export_onnx.py  test_pipeline.sh
src/: audio_checks.rs  cli.rs  doctor.rs  lib.rs  main.rs  mkl_compat.rs  model_paths.rs  server.rs  voice.rs
src/config/: mod.rs
src/inference/: mod.rs  options.rs  ref_audio.rs  speaker.rs  split.rs
src/models/: bert.rs  bert_candle.rs  bigvgan.rs  gpt.rs  hubert.rs  mod.rs  mrte.rs  semantic_tokenizer.rs  sovits.rs  sovits_decoder.rs  sovits_encp.rs  sovits_encq.rs  sovits_flow.rs  sovits_ref_enc.rs  transformer.rs  wav2vec2.rs
src/server/: audio.rs  handlers.rs  lifecycle.rs  pipeline_registry.rs  request.rs  response.rs  state.rs
src/text_frontend/: cmudict.txt  g2p.rs  lang_detect.rs  mod.rs  normalizer.rs  symbols.rs  symbols_v2.json  tone_sandhi.rs
src/utils/: audio.rs  audio_features.rs  kv_cache.rs  mod.rs  profiling.rs  weights.rs
tests/: integration_tests.rs  model_smoke.rs
voices.example/mao/: voice.json
