[package]
name = "gpt-sovits-rs"
version = "0.1.0"
edition = "2021"
authors = ["GPT-SoVITS Rust Contributors"]
description = "High-performance Rust implementation of GPT-SoVITS TTS inference engine"
license = "MIT"
repository = "https://github.com/RVC-Boss/GPT-SoVITS"
keywords = ["tts", "speech", "ai", "inference", "rust"]
categories = ["multimedia::audio", "science"]

[lib]
name = "gpt_sovits_rs"
path = "src/lib.rs"

[[bin]]
name = "gpt-sovits"
path = "src/main.rs"

[[example]]
name = "cli_inference"
path = "examples/cli_inference.rs"

[dependencies]
# Deep Learning Inference
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
# candle-onnx = "0.8"  # requires protoc
half = { version = "2.4", features = ["num-traits", "zerocopy"] }

# ONNX Runtime (for BERT/Hubert/SoVITS/BigVGAN) - downloads binaries automatically
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }

# Audio Processing
hound = "3.5"                    # WAV I/O
symphonia = { version = "0.5", features = ["all"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# Text Processing
# rust-opencc = "0.3"              # Chinese conversion - removed, not available
jieba-rs = "0.6"                 # Chinese word segmentation
pinyin = "0.10"                  # Basic pinyin conversion

# Parallelism & Performance
rayon = "1.10"
num_cpus = "1.16"
rand = "0.8"

# Async Runtime (for HTTP API)
tokio = { version = "1.40", features = ["full"], optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# CLI & Utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"

# Progress Indication
indicatif = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[features]
default = ["onnx"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
http-api = ["tokio", "axum", "tower-http"]
mkl = ["candle-core/mkl"]
onnx = []

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = false

[[bench]]
name = "inference_bench"
harness = false
