[package]
name = "gpt-sovits-rs"
version = "0.1.0"
edition = "2021"
authors = ["GPT-SoVITS Rust Contributors"]
description = "High-performance Rust implementation of GPT-SoVITS TTS inference engine"
license = "MIT"
repository = "https://github.com/RVC-Boss/GPT-SoVITS"
keywords = ["tts", "speech", "ai", "inference", "rust"]
categories = ["multimedia::audio", "science"]

[lib]
name = "gpt_sovits_rs"
path = "src/lib.rs"

[[bin]]
name = "gpt-sovits"
path = "src/main.rs"

[[example]]
name = "cli_inference"
path = "examples/cli_inference.rs"

[[example]]
name = "test_hubert_fusion"
path = "examples/test_hubert_fusion.rs"

[[example]]
name = "e2e_gpu_test"
path = "examples/e2e_gpu_test.rs"

[[example]]
name = "benchmark_gpu_kv_cache"
path = "examples/benchmark_gpu_kv_cache.rs"

[[example]]
name = "profile_kv_cache"
path = "examples/profile_kv_cache.rs"

[[example]]
name = "profile_pipeline"
path = "examples/profile_pipeline.rs"

[dependencies]
# Deep Learning Inference
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
# candle-onnx = "0.10"  # requires protoc
half = { version = "2.4", features = ["num-traits", "zerocopy"] }

# ONNX Runtime (optional, for BERT/Hubert if needed)
# ort 2.x uses Execution Providers - cuda EP enabled via the cuda feature flag (see [features])
ort = { version = "2.0.0-rc.12", features = ["half"], optional = true }

# Audio Processing
hound = "3.5"                    # WAV I/O
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.1"                  # FFT for mel spectrogram extraction
soxr = "0.6"                     # libsoxr bindings — exact match to librosa's soxr_hq

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# Text Processing
# rust-opencc = "0.3"              # Chinese conversion - removed, not available
jieba-rs = "0.6"                 # Chinese word segmentation
pinyin = "0.10"                  # Basic pinyin conversion
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }  # HuggingFace tokenizers for BERT

# Parallelism & Performance
rayon = "1.10"
num_cpus = "1.16"
rand = "0.8"

# Async Runtime (for HTTP API)
tokio = { version = "1.40", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }

# CLI & Utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"

# Progress Indication
indicatif = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "ort?/cuda"]
http-api = ["tokio", "tokio-stream", "axum", "tower-http"]
mkl = ["candle-core/mkl"]
onnx = ["ort"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = false

[[example]]
name = "test_resblock0"
path = "examples/test_resblock0.rs"

[[example]]
name = "test_cpu_vs_cuda_conv1d"
path = "examples/test_cpu_vs_cuda_conv1d.rs"

[[example]]
name = "test_conv_pre_weights"
path = "examples/test_conv_pre_weights.rs"

[[example]]
name = "test_decoder_debug"
path = "examples/test_decoder_debug.rs"

[[example]]
name = "test_encq_path"
path = "examples/test_encq_path.rs"

[[example]]
name = "debug_decoder_input"
path = "examples/debug_decoder_input.rs"

[[example]]
name = "benchmark_kv_cache"
path = "examples/benchmark_kv_cache.rs"

[[example]]
name = "benchmark_speaker_cache"
path = "examples/benchmark_speaker_cache.rs"
required-features = ["cuda", "onnx"]

[[example]]
name = "e2e_quick"
path = "examples/e2e_quick.rs"

[[example]]
name = "verify_gpt"
path = "examples/verify_gpt.rs"

[[example]]
name = "check_phonemes"
path = "examples/check_phonemes.rs"

[[example]]
name = "sovits_audio_test"
path = "examples/sovits_audio_test.rs"

[[example]]
name = "compare_stages"
path = "examples/compare_stages.rs"
required-features = ["cuda", "onnx"]

[[example]]
name = "benchmark_fp16_vs_fp32"
path = "examples/benchmark_fp16_vs_fp32.rs"
required-features = ["cuda", "onnx"]

[[bench]]
name = "inference_bench"
harness = false

