[package]
name = "gpt-sovits-rs"
version = "0.1.0"
edition = "2021"
authors = ["GPT-SoVITS Rust Contributors"]
description = "High-performance Rust implementation of GPT-SoVITS TTS inference engine"
license = "MIT"
repository = "https://github.com/RVC-Boss/GPT-SoVITS"
keywords = ["tts", "speech", "ai", "inference", "rust"]
categories = ["multimedia::audio", "science"]

[lib]
name = "gpt_sovits_rs"
path = "src/lib.rs"

[[bin]]
name = "gpt-sovits"
path = "src/main.rs"

[[example]]
name = "cli_inference"
path = "examples/cli_inference.rs"

[[example]]
name = "profile_kv_cache"
path = "examples/profile_kv_cache.rs"

[[example]]
name = "cuda_oxide_candle"
path = "examples/cuda_oxide_candle.rs"
required-features = ["cuda"]

[[example]]
name = "compare_cuda_graph_tokens"
path = "examples/compare_cuda_graph_tokens.rs"
required-features = ["cuda"]

[dependencies]
# Deep Learning Inference
candle-core = "0.10"
candle-nn = "0.10"
candle-transformers = "0.10"
half = { version = "2.4", features = ["num-traits", "zerocopy"] }

# Audio Processing
hound = "3.5"                    # WAV I/O
symphonia = { version = "0.5", features = ["all"] }
rustfft = "6.1"                  # FFT for mel spectrogram extraction
soxr = "0.6"                     # libsoxr bindings — exact match to librosa's soxr_hq

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
safetensors = "0.4"

# Text Processing
# rust-opencc = "0.3"              # Chinese conversion - removed, not available
jieba-rs = "0.6"                 # Chinese word segmentation
pinyin = "0.10"                  # Basic pinyin conversion
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }  # HuggingFace tokenizers for BERT

# Parallelism & Performance
rayon = "1.10"
num_cpus = "1.16"
rand = "0.8"

# Async Runtime (for HTTP API)
tokio = { version = "1.40", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
base64 = { version = "0.22", optional = true }

# CLI & Utilities
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"

# Progress Indication
indicatif = "0.17"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
http-api = ["tokio", "tokio-stream", "axum", "tower-http", "base64"]
mkl = ["candle-core/mkl"]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3

[profile.release-fast]
inherits = "release"
lto = false

# Fast dev builds: ~3-5x faster compile, GPU perf unchanged (bottleneck is CUDA kernels)
[profile.dev-gpu]
inherits = "release"
codegen-units = 16
opt-level = 2
lto = false
debug = false

[[example]]
name = "test_resblock0"
path = "examples/test_resblock0.rs"

[[example]]
name = "test_cpu_vs_cuda_conv1d"
path = "examples/test_cpu_vs_cuda_conv1d.rs"

[[example]]
name = "test_conv_pre_weights"
path = "examples/test_conv_pre_weights.rs"

[[example]]
name = "e2e_quick"
path = "examples/e2e_quick.rs"

[[example]]
name = "check_phonemes"
path = "examples/check_phonemes.rs"

[[bench]]
name = "inference_bench"
harness = false

[[bench]]
name = "kv_cache_bench"
harness = false
required-features = ["cuda"]

[[bench]]
name = "conv1d_cpu_bench"
harness = false
required-features = ["mkl"]
